--- a/Connector/config.json
+++ b/Connector/config.json
@@ -1,5 +1,5 @@
 {
     "version": "1.1.7",
-    "availableCurrenciesFile": "../.availableCurrencies.json",
+    "availableCurrenciesFile": ".availableCurrencies.json",
     "defaultPkgConfFile": "defaultConf.json"
 }
