--- a/docker-compose/mainnet/luna.yml
+++ b/docker-compose/mainnet/luna.yml
@@ -8,3 +8,8 @@ services:
       NETWORK: columbus-5
     volumes:
       - ${BLOCKCHAIN_PATH}/terrad:/root/.terra
+
+networks:
+  default:
+    external:
+      name: nodechain-network
