ETH config vars to string

--- a/Connector/eth/rpcschemas/config.json
+++ b/Connector/eth/rpcschemas/config.json
@@ -15,7 +15,7 @@
             "type": "string"
         },
         "rpcPort": {
-            "type": "integer"
+            "type": "string"
         },
         "wsPort": {
             "type": "string"
