LUNA config vars to string

--- a/Connector/luna/rpcschemas/config.json
+++ b/Connector/luna/rpcschemas/config.json
@@ -3,6 +3,20 @@
   "title": "",
   "description": "",
   "type": "object",
-  "properties": {},
-  "required": []
+  "properties": {
+    "terradProtocol": {
+      "type": "string"
+    },
+    "terradHost": {
+      "type": "string"
+    },
+    "terradPort": {
+      "type": "string"
+    }
+  },
+  "required": [
+    "terradProtocol",
+    "terradHost",
+    "terradPort"
+  ]
 }
