--- a/docker-compose/regtest/eth.yml
+++ b/docker-compose/regtest/eth.yml
@@ -1,6 +1,6 @@
 version: "3"
 services:
-  ethereumgo:
+  ethereumgo-regtest:
     image: trufflesuite/ganache-cli
     command: -p=8545 -h=0.0.0.0 -m="piece effort bind that embrace enrich remind powder sudden patient legend group"
     volumes:
