--- a/docker-compose/testnet/luna.yml
+++ b/docker-compose/testnet/luna.yml
@@ -1,6 +1,6 @@
 version: "3"
 services:
-  terrad:
+  terrad-testnet:
     build: ../../packages/nodechain-terrad
     image: terrad
     environment:
