Fix overwritten environment variable

--- a/docker-compose/mainnet/luna.yml
+++ b/docker-compose/mainnet/luna.yml
@@ -5,7 +5,7 @@ services:
     image: terrad
     environment:
       MAINNET: 1
-      NETWORK: columbus-5
+      NET: columbus-5
     volumes:
       - ${BLOCKCHAIN_PATH}/terrad:/root/.terra
 
