--- a/docker-compose/testnet/bch.yml
+++ b/docker-compose/testnet/bch.yml
@@ -6,7 +6,7 @@ services:
     volumes:
       - ${BLOCKCHAIN_PATH}/bitcoinabc:/home/bitcoin/.bitcoin
 
-  electrumx:
+  electrumx-mainnet:
     image: lukechilds/electrumx
     environment:
       DAEMON_URL: http://swapper:swapper@bitcoinabc-testnet:8332
@@ -19,10 +19,11 @@ services:
     volumes:
       - ${BLOCKCHAIN_PATH}/electrumx:/data
 
-  electrum:
+  electrum-mainnet:
     build: ../../packages/nodechain-electron-cash
     image: electrum
     environment:
+      NETWORK: ${NETWORK}
       TESTNET: 1
 
 networks:
