--- a/docker-compose/mainnet/xmr.yml
+++ b/docker-compose/mainnet/xmr.yml
@@ -1,6 +1,6 @@
 version: "3"
 services:
-  monerod:
+  monerod-mainnet:
     build: ../../packages/nodechain-monerod
     image: monerod
     command: --p2p-bind-ip=0.0.0.0 --p2p-bind-port=18080 --rpc-bind-ip=0.0.0.0 --rpc-bind-port=18081 --non-interactive --confirm-external-bind
