--- a/docker-compose/mainnet/eth.yml
+++ b/docker-compose/mainnet/eth.yml
@@ -5,6 +5,50 @@ services:
     command: --http --http.addr=ethereumgo-mainnet --cache=1024 --http.port=8545 --syncmode=full --gcmode=archive --ws --ws.addr=ethereumgo-mainnet --ws.port=8546 --ws.origins=connector --http.vhosts=ethereumgo-mainnet
     volumes:
       - ${BLOCKCHAIN_PATH}/ethereumgo:/root/.ethereum
+    healthcheck:
+      test: ["CMD-SHELL", "wget -q -O - http://localhost:8545 --post-data '{\"jsonrpc\":\"2.0\",\"method\":\"net_listening\",\"params\": [],\"id\":1}'"]
+      interval: 5s
+      timeout: 15s
+      retries: 5
+
+  postgres-mainnet:
+    build: ../../packages/nodechain-ethereum-indexer
+    image: nodechain-ethereum-indexer
+    volumes:
+      - ${BLOCKCHAIN_PATH}/postgres:/var/lib/postgresql/data
+    environment:
+      POSTGRES_USER: swapper
+      POSTGRES_PASSWORD: swapper
+      POSTGRES_DB: swapper
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -d postgres://swapper_writer:swapper_writer@postgres-mainnet:5432/swapper"]
+      interval: 5s
+      timeout: 15s
+      retries: 5
+  
+  postgrest-mainnet:
+    image: postgrest/postgrest
+    environment:
+      PGRST_DB_URI: postgres://swapper_reader:swapper_reader@postgres-mainnet:5432/swapper
+      PGRST_DB_SCHEMAS: public
+      PGRST_DB_ANON_ROLE: swapper_reader
+    depends_on:
+      postgres-mainnet:
+        condition: service_healthy
+
+  synchroniser-mainnet:
+    image: guenoledc/eth-tx-storage
+    environment:
+      DB_NAME: postgres://swapper_writer:swapper_writer@postgres-mainnet:5432/swapper
+      ETH_URL: wss://ethereumgo-mainnet:8546
+      START_BLOCK: 4370000
+      CONFIRMATIONS_BLOCK: 6
+      PERIOD: 20
+    depends_on:
+      ethereumgo-mainnet:
+        condition: service_healthy
+      postgres-mainnet:
+        condition: service_healthy
 
 networks:
   default:
