--- a/docker-compose/testnet/eth.yml
+++ b/docker-compose/testnet/eth.yml
@@ -40,7 +40,7 @@ services:
     image: guenoledc/eth-tx-storage
     environment:
       DB_NAME: postgres://swapper_writer:swapper_writer@postgres-testnet:5432/swapper
-      ETH_URL: wss://ethereumgo-testnet:8546
+      ETH_URL: ws://ethereumgo-testnet:8546
       START_BLOCK: 1700000
       CONFIRMATIONS_BLOCK: 3
       PERIOD: 20
