--- a/Connector/tests/docker-compose/eth.yml
+++ b/Connector/tests/docker-compose/eth.yml
@@ -1,6 +1,6 @@
 version: "3"
 services:
-  ethereumgo:
+  ethereumgo-test:
     image: trufflesuite/ganache-cli
     command:
       -p=8545 -h=0.0.0.0 -m="piece effort bind that embrace enrich remind powder sudden patient legend group"
@@ -8,3 +8,49 @@ services:
       - ${BLOCKCHAIN_PATH}/ethereumgo:/root/.ethereum
     ports:
       - 8545:8545
+    healthcheck:
+      test: ["CMD-SHELL", "wget -q -O - http://localhost:8545 --post-data '{\"jsonrpc\":\"2.0\",\"method\":\"net_listening\",\"params\": [],\"id\":1}'"]
+      interval: 5s
+      timeout: 15s
+      retries: 5
+
+  postgres-test:
+    build: ../../../packages/nodechain-ethereum-indexer
+    image: nodechain-ethereum-indexer
+    volumes:
+      - ${BLOCKCHAIN_PATH}/postgres:/var/lib/postgresql/data
+    environment:
+      POSTGRES_USER: swapper
+      POSTGRES_PASSWORD: swapper
+      POSTGRES_DB: swapper
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -d postgres://swapper_writer:swapper_writer@postgres-test:5432/swapper"]
+      interval: 5s
+      timeout: 15s
+      retries: 5
+
+  postgrest-test:
+    image: postgrest/postgrest
+    environment:
+      PGRST_DB_URI: postgres://swapper_reader:swapper_reader@postgres-test:5432/swapper
+      PGRST_DB_SCHEMAS: public
+      PGRST_DB_ANON_ROLE: swapper_reader
+    ports:
+      - 3000:3000
+    depends_on:
+      postgres-test:
+        condition: service_healthy
+
+  synchroniser-test:
+    image: guenoledc/eth-tx-storage
+    environment:
+      DB_NAME: postgres://swapper_writer:swapper_writer@postgres-test:5432/swapper
+      ETH_URL: ws://ethereumgo-test:8545
+      START_BLOCK: 0
+      CONFIRMATIONS_BLOCK: 0
+      PERIOD: 20
+    depends_on:
+      ethereumgo-test:
+        condition: service_healthy
+      postgres-test:
+        condition: service_healthy
