--- a/docker-compose/regtest/eth.yml
+++ b/docker-compose/regtest/eth.yml
@@ -1,15 +1,15 @@
 version: "3"
 services:
   ethereumgo-regtest:
-    image: trufflesuite/ganache-cli
-    command: -p=8545 -h=0.0.0.0 -m="piece effort bind that embrace enrich remind powder sudden patient legend group"
+    image: ethereum/client-go:latest
+    command: --dev --http --http.addr=ethereumgo-regtest --http.api="eth,personal,web3,net,miner" --http.port=8545 --ws --ws.addr=ethereumgo-regtest --ws.port=8546 --ws.origins=connector --http.vhosts=ethereumgo-regtest --graphql --graphql.vhosts=ethereumgo-regtest
     volumes:
       - ${BLOCKCHAIN_PATH}/ethereumgo:/root/.ethereum
     healthcheck:
-      test: ["CMD-SHELL", "wget -q -O - http://localhost:8545 --post-data '{\"jsonrpc\":\"2.0\",\"method\":\"net_listening\",\"params\": [],\"id\":1}'"]
-      interval: 5s
+      test: ["CMD-SHELL", "wget -q -O - http://ethereumgo-regtest:8545"]
+      interval: 10s
       timeout: 15s
-      retries: 5
+      retries: 10
 
   postgres-regtest:
     build: ../../packages/nodechain-ethereum-indexer
@@ -40,7 +40,7 @@ services:
     image: guenoledc/eth-tx-storage
     environment:
       DB_NAME: postgres://swapper_writer:swapper_writer@postgres-regtest:5432/swapper
-      ETH_URL: ws://ethereumgo-regtest:8545
+      ETH_URL: ws://ethereumgo-regtest:8546
       START_BLOCK: 0
       CONFIRMATIONS_BLOCK: 0
       PERIOD: 20
