--- a/Connector/tests/docker-compose/eth.yml
+++ b/Connector/tests/docker-compose/eth.yml
@@ -1,24 +1,24 @@
 version: "3"
 services:
   ethereumgo-regtest:
-    image: trufflesuite/ganache-cli
-    command:
-      -p=8545 -h=0.0.0.0 -m="piece effort bind that embrace enrich remind powder sudden patient legend group"
+    image: ethereum/client-go:latest
+    command: --dev --cache 1024 --http --http.addr 0.0.0.0 --http.api eth,personal,web3,net,miner --http.port 8545 --http.vhosts '*' --ws --ws.port 8546 --ws.addr 0.0.0.0 --ws.origins '*' --ws.api eth,net,web3 --graphql
     volumes:
       - ${BLOCKCHAIN_PATH}/ethereumgo:/root/.ethereum
     ports:
       - 8545:8545
+      - 8546:8546
     healthcheck:
-      test: ["CMD-SHELL", "wget -q -O - http://localhost:8545 --post-data '{\"jsonrpc\":\"2.0\",\"method\":\"net_listening\",\"params\": [],\"id\":1}'"]
-      interval: 5s
+      test: ["CMD-SHELL", "wget -q -O - http://localhost:8545"]
+      interval: 10s
       timeout: 15s
-      retries: 5
+      retries: 10
 
   postgres-regtest:
-    build: ../../../packages/nodechain-ethereum-indexer
+    build: ../../packages/nodechain-ethereum-indexer
     image: nodechain-ethereum-indexer
     volumes:
-      - ${BLOCKCHAIN_PATH}/postgres:/var/lib/postgresql/data
+      - ${BLOCKCHAIN_PATH}/postgres/development:/var/lib/postgresql/data
     environment:
       POSTGRES_USER: swapper
       POSTGRES_PASSWORD: swapper
@@ -45,12 +45,17 @@ services:
     image: guenoledc/eth-tx-storage
     environment:
       DB_NAME: postgres://swapper_writer:swapper_writer@postgres-regtest:5432/swapper
-      ETH_URL: ws://ethereumgo-regtest:8545
+      ETH_URL: ws://ethereumgo-regtest:8546
       START_BLOCK: 0
       CONFIRMATIONS_BLOCK: 0
-      PERIOD: 20
+      PERIOD: 1
     depends_on:
       ethereumgo-regtest:
         condition: service_healthy
       postgres-regtest:
         condition: service_healthy
+
+networks:
+  default:
+    external:
+      name: nodechain-network
