--- a/docker-compose/testnet/btc.yml
+++ b/docker-compose/testnet/btc.yml
@@ -25,7 +25,7 @@ services:
     environment:
       TESTNET: 1
       DAEMON_RPC_URL: bitcoincore-testnet:8332
-      ELECTRUM_RPC_URL: 0.0.0.0:60001
+      ELECTRUM_RPC_URL: electrs-testnet:60001
       NETWORK: ${NETWORK}
     volumes:
       - ${BLOCKCHAIN_PATH}/electrs:/build/.electrs
@@ -37,8 +37,8 @@ services:
     depends_on:
       - electrs-testnet
     environment:
-      TESTNET: 1
       NETWORK: ${NETWORK}
+      SERVER: electrs-testnet:60001:t
 
 networks:
   default:
