--- a/Connector/config.json
+++ b/Connector/config.json
@@ -1,4 +1,4 @@
 {
     "version": "1.1.7",
-    "availableCurrenciesFile": ".availableCurrencies.json"
+    "availableCurrenciesFile": "availableCurrencies.json"
 }
