--- a/Connector/tests/docker-compose/btc.yml
+++ b/Connector/tests/docker-compose/btc.yml
@@ -27,19 +27,22 @@ services:
     image: electrs
     command: -v --timestamp
     depends_on:
-      - bitcoincore
+      - bitcoincore-regtest
     environment:
       REGTEST: 1
       DAEMON_RPC_URL: bitcoincore-regtest:8332
-      ELECTRUM_RPC_URL: 0.0.0.0:60401
+      ELECTRUM_RPC_URL: electrs-regtest:60401
     volumes:
       - ${BLOCKCHAIN_PATH}/electrs:/build/.electrs
       - ${BLOCKCHAIN_PATH}/bitcoincode:/home/bitcoin/.bitcoin
 
   electrum-regtest:
-    build: ../../../packages/nodechain-electrum-regtest
+    build: ../../../packages/nodechain-electrum
     image: electrum
+    depends_on:
+      - electrs-regtest
     environment:
-      REGTEST: 1
+      NETWORK: ${NETWORK}
+      SERVER: electrs-regtest:60401:t
     ports:
       - 30000:30000
