--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,13 +1,43 @@
 events {}
 
 http {
+
   error_log /etc/nginx/error_log.log warn;
   client_max_body_size 20m;
 
   server {
     listen 80;
     listen [::]:80;
-    server_name _; 
+    server_name _;
+    location / {
+      proxy_pass http://connector:80;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "Upgrade";
+      proxy_set_header Host $host;
+    }
+    location /admin {
+      deny all;
+    }
+  }
+
+  server {
+    listen 80;
+    listen [::]:80;
+    server_name localhost; 
+    location / {
+      proxy_pass http://connector:80;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "Upgrade";
+      proxy_set_header Host $host;
+    }
+  }
+
+  server {
+    listen 80;
+    listen [::]:80;
+    server_name 127.0.0.1; 
     location / {
       proxy_pass http://connector:80;
       proxy_http_version 1.1;
