--- a/docker-compose/testnet/btc.yml
+++ b/docker-compose/testnet/btc.yml
@@ -15,13 +15,17 @@ services:
       -zmqpubhashblock=tcp://0.0.0.0:28332
     volumes:
       - ${BLOCKCHAIN_PATH}/bitcoincore:/home/bitcoin/.bitcoin
+    healthcheck:
+      test: ["CMD-SHELL", "curl http://swapper:swapper@bitcoincore-testnet:8332 -H 'content-type:text/plain;' --data-binary ''"]
+      interval: 5s
+      timeout: 15s
+      retries: 5
+    restart: on-failure
 
   electrs-testnet:
     build: ../../packages/nodechain-electrs
     image: electrs
     command: -v --timestamp
-    depends_on:
-      - bitcoincore-testnet
     environment:
       TESTNET: 1
       DAEMON_RPC_URL: bitcoincore-testnet:8332
@@ -30,15 +34,21 @@ services:
     volumes:
       - ${BLOCKCHAIN_PATH}/electrs:/build/.electrs
       - ${BLOCKCHAIN_PATH}/bitcoincore:/home/bitcoin/.bitcoin
+    depends_on:
+      bitcoincore-testnet:
+        condition: service_healthy
+    restart: on-failure
+
 
   electrum-testnet:
     build: ../../packages/nodechain-electrum
     image: electrum
-    depends_on:
-      - electrs-testnet
     environment:
       NETWORK: ${NETWORK}
       SERVER: electrs-testnet:60001:t
+    depends_on:
+      - electrs-testnet
+    restart: on-failure
 
 networks:
   default:
